--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Todo App</title>
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="./node_modules/jquery-confirm/dist/jquery-confirm.min.css">
     <link rel="stylesheet" href="./css/base.css">
 </head>
 <body>
@@ -30,6 +31,7 @@
 
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/store/dist/store.everything.min.js"></script>
+<script src="./node_modules/jquery-confirm/dist/jquery-confirm.min.js"></script>
 <script src="./js/base.js"></script>
 </body>
 </html>
